--- a/aula2/Catalago/app/src/main/res/layout/activity_fdf600w_page.xml
+++ b/aula2/Catalago/app/src/main/res/layout/activity_fdf600w_page.xml
@@ -65,13 +65,14 @@
 
         <LinearLayout
             android:id="@+id/PrimirosCmp"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/Agua"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="12dp">
@@ -150,7 +151,8 @@
 
         <LinearLayout
             android:id="@+id/SegundoCmp"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -205,7 +207,7 @@
 
             <LinearLayout
                 android:id="@+id/Cartao"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="12dp">
