--- a/aula01/hello-word/src/app/cidades/cidades.page.html
+++ b/aula01/hello-word/src/app/cidades/cidades.page.html
@@ -1,5 +1,5 @@
 <ion-header class="header">
-  <img src="../../assets/Logo.png" alt="logo">
+  <img src="../../assets/PadoLabsLogo.png" alt="logo" width="150" hight="78">
 </ion-header>
 
 <ion-content>
