--- a/aula01/hello-word/src/app/home/home.page.html
+++ b/aula01/hello-word/src/app/home/home.page.html
@@ -1,5 +1,6 @@
+<div class="page">
 <ion-header class="header">
-  <img src="../../assets/Logo.png" alt="logo">
+  <img src="../../assets/PadoLabsLogo.png" alt="logo" width="150" hight="78">
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -8,6 +9,16 @@
     <ion-breadcrumb href="#cidade">Cidade</ion-breadcrumb>
     <ion-breadcrumb href="#lista">Lista</ion-breadcrumb>
   </ion-breadcrumbs>
+
+  <!-- <ion-card *ngFor="let cidade of cidades">
+    <ion-card-header>
+      <ion-card-subtitle>{{cidades.Cidades}}</ion-card-subtitle>
+    </ion-card-title>{{cidades.Cidades}}, {{cidades.UF}}</ion-card-totle>
+    </ion-card-header>
+      <ion-card-content>{{cidades.descricao_curta}}</ion-card-content>
+      <ion-botton expand="block" (click)="goToPage(cidade);">Visualizar</ion-botton>
+      <br>  
+  </ion-card> -->
 
   <ion-card class="card">
     <ion-card-header>
@@ -46,5 +57,7 @@
       <p class="description">Maringa é um município brasileiro do estado do Paraná, sendo uma cidade média-grande planejada e de urbanização recente.</p>
       <ion-button class="sub-title" expand="full">VISUALIZAR CIDADE</ion-button>
     </ion-card-content>
+    
   </ion-card>
 </ion-content>
+</div>
