--- a/aula01/hello-word/src/app/login/login.page.html
+++ b/aula01/hello-word/src/app/login/login.page.html
@@ -11,12 +11,12 @@
             <form class="formulario">
             <div class="completar"> 
                 <label for="login"></label>
-                <input class="input" type="text" id="uf" placeholder=" LOGIN"/>
+                <input class="input" type="text" id="uf" placeholder=" EMAIL"/>
             </div>
             
             <div class="completar">
                 <label for="senha"></label>
-                <input class="input" type="password" id="SENHA" placeholder=" CIDADE"/>
+                <input class="input" type="password" id="SENHA" placeholder=" SENHA"/>
             </div>
 
             <ion-button Class=" button-rg" expand="block">ENTRAR</ion-button>
