página de perfil

--- a/aula01/hello-word/src/app/perfil/perfil.page.html
+++ b/aula01/hello-word/src/app/perfil/perfil.page.html
@@ -1,9 +1,65 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>perfil</ion-title>
-  </ion-toolbar>
-</ion-header>
+<body class="page">
 
-<ion-content>
+  <ion-header id="cabecalho">
+    <ion-icon class="icon" name="arrow-back-outline"></ion-icon>
+    <p class="title">MEU PERFIL</p>
+    <ion-icon name=""></ion-icon>
+  </ion-header>
 
-</ion-content>
+  <ion-content class="principal">
+
+    <div class="titlePage">
+      <h1>Perfil</h1>
+      <p>Configurações de perfil</p>
+    </div>
+
+      <div class="datas">
+        <div class="card">
+          <p class="text email">Email</p>
+          <p class="text email">henriquebfc@gmail.com</p>
+        </div>
+        <div class="card">
+          <p class="text">Nome</p>
+          <div class="dadosTopic">
+          <p class="text">Henrique Carlos</p>
+          <ion-icon class="textDiferente" name="chevron-forward-outline"></ion-icon>
+          </div>
+        </div>
+        <div class="card">
+          <p class="text">Idioma</p>
+          <div class="dadosTopic">
+            <p class="text">Português(Brasil)</p>
+            <ion-icon class="textDiferente" name="chevron-forward-outline"></ion-icon>
+          </div>
+        </div>
+      </div>
+
+      <div class="values">
+        <div class="card">
+          <div class="dadosTopic">
+            <ion-icon class="textDiferente" name="settings-outline"></ion-icon>
+            <p class="text textDiferente">Configurações do sistema</p>
+          </div>
+          <ion-icon class="textDiferente" name="chevron-forward-outline"></ion-icon>
+        </div>
+
+        <div class="card">
+          <div class="dadosTopic">
+            <ion-icon class="textDiferente" name="help-circle-outline"></ion-icon>
+            <p class="text textDiferente">Ajuda</p>
+          </div>
+          <ion-icon class="textDiferente" name="chevron-forward-outline"></ion-icon>
+        </div>
+      
+
+        <div class="card">
+          <div class="dadosTopic">
+            <ion-icon class="textDiferente" name="notifications-outline"></ion-icon>
+            <p class="text textDiferente">Notificações</p>
+          </div>
+          <ion-icon class="textDiferente" name="chevron-forward-outline"></ion-icon>
+        </div>
+    </div>
+
+  </ion-content>
+</body>
