--- a/aula01/hello-word/src/app/regioes/regioes.page.html
+++ b/aula01/hello-word/src/app/regioes/regioes.page.html
@@ -1,61 +1,32 @@
-<body class="page">
-<ion-header class="header">
-  <img src="../../assets/PadoLabsLogo.png" alt="logo" width="150" hight="78">
-</ion-header>
-  
-<ion-content> 
-  <h3>SELECIONE UMA REGIÃO</h3>
+  <ion-header class="header">
+    <img src="../../assets/PadoLabsLogo.png" alt="logo" width="150" hight="78">
+  </ion-header>
+      
+  <ion-content class="ion-padding"> 
+    <h3>SELECIONE UMA REGIÃO</h3>
 
-  <div class="fundo">
-    <p>NORTE</p>
-  </div>
-
-  <div class="fundo">
-    <p>SUL</p>
-  </div>
-
-  <div class="fundo">
-    <p>LESTE</p>
-  </div>
-
-  <div class="fundo">
-    <p>OESTE</p>
-  </div>
-
-  <div class="fundo">
-    <p>NORDESTE</p>
-  </div>
-
-  <div class="fundo">
-    <p>SUDESTE</p>
-  </div>
-
-  <div class="fundo">
-    <p>SUDOESTE</p>
-  </div>
-
-  <div class="fundo">
-    <p>NOROESTE</p>
-  </div>
-
-  <div class="menu">
-    <img src="../../assets/home-outline 1.png">
-    <img src="../../assets/home-outline 1.png">
-    <img src="../../assets/home-outline 1.png">
-  
-  </div>
-</ion-content>
-</body>
-
-<ion-footer> 
-</ion-footer>
-
-<ion-footer class="footer" collapse="fade">
-  <ion-toolbar class="toolbar">
-    <div class="menu">
-      <img class="img-n" src="../../assets/home-outline 1.png">
-      <img class="img-n" src="../../assets/Vector.png">
-      <img class="img-n" src="../../assets/person-outline 1.png">
+    <div class="regioes" *ngFor="let myData of getData()">
+      <div (click)='goToPage(myData.url)'class="fundo">
+        <p>{{myData.title}}</p>
+      </div>
     </div>
-  </ion-toolbar>
-</ion-footer>
+
+      
+  </ion-content>
+
+  <!-- <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="schedule">
+        <ion-icon name="home-outline"></ion-icon>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="speakers">
+        <ion-icon name="star-outline"></ion-icon>
+      </ion-tab-button>
+  
+      <ion-tab-button tab="map">
+        <ion-icon name="person-outline"></ion-icon>
+      </ion-tab-button>
+  
+    </ion-tab-bar>
+  </ion-tabs> -->
