--- a/aula01/hello-word/src/app/regioes/regioes.page.scss
+++ b/aula01/hello-word/src/app/regioes/regioes.page.scss
@@ -2,15 +2,8 @@
     display: flex;
     justify-content:center;
     background-color: #19133E;
-    margin-bottom:40px;
-    padding:5px;
-}
-
-.page{
-    background-color: #19133E;
-    height:100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding:20px;
+    position:relative;
 }
 
 h3{
@@ -39,15 +32,6 @@ p{
     margin-bottom: 15px;
 }
 
-.menu{
-    background-color: #D9D9D9;
-    height: 55px;
-    width: 100%;
-    justify-content: space-evenly;
-    display: flex;
-    align-items:center;
-}
-
 .img-n{
     width: 30px;
     height: 30px;
@@ -55,6 +39,12 @@ p{
 }
 
 ion-content{
-    --background: #19133E;   
+    --background: #19133E; 
+}
+
+.ion-padding{
+    padding-left: 20px;
+    padding-right: 20px;  
   }
   
+ 
