Atualizações da aula 3

--- a/aula01/hello-word/src/app/ajuda/ajuda.page.html
+++ b/aula01/hello-word/src/app/ajuda/ajuda.page.html
@@ -54,3 +54,10 @@
 
   </ion-content>
 </body>
+<ion-footer>
+  <div class="footer">
+    <ion-icon class="footer_image" (click)='goToPage("home")' name="home-outline"></ion-icon>
+    <ion-icon class="footer_image" (click)='goToPage("favorito")' name="star-outline"></ion-icon>
+    <ion-icon class="footer_image" (click)='goToPage("perfil")' name="person-outline"></ion-icon>
+  </div>
+</ion-footer>
