--- a/aula01/hello-word/src/app/perfil/perfil.page.html
+++ b/aula01/hello-word/src/app/perfil/perfil.page.html
@@ -1,7 +1,7 @@
 <body class="page">
 
   <ion-header id="cabecalho">
-    <ion-icon class="icon" name="arrow-back-outline"></ion-icon>
+    <ion-icon class="icon" name="arrow-back-outline" (click)='goToPage("regioes")'></ion-icon>
     <p class="title">MEU PERFIL</p>
     <ion-icon name=""></ion-icon>
   </ion-header>
