--- a/aula01/hello-word/src/app/ajuda/ajuda.page.scss
+++ b/aula01/hello-word/src/app/ajuda/ajuda.page.scss
@@ -46,3 +46,14 @@ ion-content{
         color: #807e7e;
     }
 }
+
+.footer {
+    background: #D9D9D9;
+    padding: 15px;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .footer_image {
+    font-size: 26px;
+  }
