--- a/aula01/hello-word/src/app/cidade/cidade.page.scss
+++ b/aula01/hello-word/src/app/cidade/cidade.page.scss
@@ -40,3 +40,14 @@
   .card{
     background-color: #FFFFFF;
   }
+
+  .footer {
+    background: #D9D9D9;
+    padding: 15px;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .footer_image {
+    font-size: 26px;
+  }
