--- a/aula01/hello-word/src/app/cidades/cidades.page.html
+++ b/aula01/hello-word/src/app/cidades/cidades.page.html
@@ -4,26 +4,37 @@
   </ion-header>
   
   <ion-content [fullscreen]="true">
-
+    
     <ion-breadcrumbs>
       <ion-breadcrumb href="#regioes">Região</ion-breadcrumb>
-      <ion-breadcrumb href="#cidades">norte</ion-breadcrumb>
+      <ion-breadcrumb>{{regiao}}</ion-breadcrumb>
     </ion-breadcrumbs>
-  
-    <div class="cidades" *ngFor="let cidade of Cidades">
+    
+    <div class="cidades" *ngFor="let cidade of cidades">
       <ion-card class="card">
         <ion-card-header>
-          <img src="{{cidade.imagem}}" alt="FotoLondrina">
-          <p class="sub-title">DESTINO</p>
-          <ion-card-title class="title">{{cidade.Cidade}}, {{cidade.UF}}</ion-card-title>
+          <img src="{{cidade.cityImage}}" alt="FotoLondrina">
+          <div class="estrela">
+            <p class="sub-title">DESTINO</p>
+            <ion-icon class="star" name="star"></ion-icon>
+          </div>
+          <ion-card-title class="title">{{cidade.cityName}}, {{cidade.cityUf}}</ion-card-title>
         </ion-card-header>
       
         <ion-card-content>
-          <p class="description">{{cidade.descricao_curta}}</p>
-          <ion-button (click)='goToPage(myData.cidade)' class="sub-title" expand="full" >VISUALIZAR CIDADE</ion-button>
+          <p class="description">{{cidade.cityShortDescription}}</p>
+          <ion-button (click)='goToPage(cidade)' class="sub-title" expand="full" >VISUALIZAR CIDADE</ion-button>
         </ion-card-content>
       </ion-card>
     </div>
     
   </ion-content>
+  
+</div>
+<ion-footer>
+  <div class="footer">
+    <ion-icon class="footer_image" (click)='goToPageMenu("regioes")' name="home-outline"></ion-icon>
+    <ion-icon class="footer_image" (click)='goToPageMenu("favorito")'name="star-outline"></ion-icon>
+    <ion-icon class="footer_image" (click)='goToPageMenu("perfil")'name="person-outline"></ion-icon>
   </div>
+</ion-footer>
