--- a/aula01/hello-word/src/app/cidades/cidades.page.scss
+++ b/aula01/hello-word/src/app/cidades/cidades.page.scss
@@ -54,3 +54,23 @@ p{
 #container a {
   text-decoration: none;
 }
+
+.estrela{
+  display: flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.star{
+  font: size 18px;
+}
+.footer {
+  background: #D9D9D9;
+  padding: 15px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer_image {
+  font-size: 26px;
+}
