--- a/aula01/hello-word/src/app/login/login.page.html
+++ b/aula01/hello-word/src/app/login/login.page.html
@@ -9,23 +9,29 @@
         <div class="container">
 
             <form class="formulario">
-            <div class="completar"> 
-                <label for="login"></label>
-                <input class="input" type="text" id="uf" placeholder=" EMAIL"/>
-            </div>
-            
-            <div class="completar">
-                <label for="senha"></label>
-                <input class="input" type="password" id="SENHA" placeholder=" SENHA"/>
-            </div>
+                <div class="completar"> 
+                    <!-- <label for="login"></label>
+                    <input class="input" type="text" id="uf" placeholder=" EMAIL"/> -->
+                    <ion-input class="input" [(ngModel)]="email" placeholder="  Login"></ion-input>
+                </div>
+                
+                <div class="completar">
+                    <!-- <label for="senha"></label>
+                    <input class="input" type="password" id="SENHA" placeholder=" SENHA"/> -->
+                    <ion-input class="input" [(ngModel)]="password" placeholder="  Senha" type="password"></ion-input>
+                </div>
 
-            <ion-button (click)='goToPage("regioes")' Class=" button-rg" expand="block">ENTRAR</ion-button>
+            <!-- <ion-button (click)="onSubmit()" Class=" button-rg" expand="block">ENTRAR</ion-button> -->
+                <ion-button class="button-ng" (click)="onSubmit()"> ENTRAR</ion-button>
             </form>
             
             <div class="texto">
-                <p>NÃO TEM CONTA  <a (click)='goToPage("registro")'> <b>REGISTRE-SE </b></a></p>
+                <p>NÃO TEM CONTA  <a (click)="goToPage()" > <b>REGISTRE-SE </b></a></p>
+                <!-- <ion-button class="p" (click)="goToPage()" fill="clear"> NÃO TEM CONTA? <b>REGISTRE-SE </b></ion-button> -->
             </div>
         </div>
+
+
     </ion-content>
     
 </body>
