--- a/aula01/hello-word/src/app/regioes/regioes.page.html
+++ b/aula01/hello-word/src/app/regioes/regioes.page.html
@@ -6,27 +6,33 @@
     <h3>SELECIONE UMA REGIÃO</h3>
 
     <div class="regioes" *ngFor="let myData of getData()">
-      <div (click)='goToPage(myData.url)'class="fundo">
+      <div (click)='goToPage(myData.title)'class="fundo">
         <p>{{myData.title}}</p>
       </div>
     </div>
 
       
+    <!-- <ion-tabs>
+      <ion-tab-bar slot="bottom">
+        <ion-tab-button tab="schedule">
+          <ion-icon name="home-outline"></ion-icon>
+        </ion-tab-button>
+    
+        <ion-tab-button tab="speakers">
+          <ion-icon name="star-outline"></ion-icon>
+        </ion-tab-button>
+    
+        <ion-tab-button tab="map">
+          <ion-icon name="person-outline"></ion-icon>
+        </ion-tab-button>
+    
+      </ion-tab-bar>
+    </ion-tabs> -->
   </ion-content>
-
-  <!-- <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="schedule">
-        <ion-icon name="home-outline"></ion-icon>
-      </ion-tab-button>
-  
-      <ion-tab-button tab="speakers">
-        <ion-icon name="star-outline"></ion-icon>
-      </ion-tab-button>
-  
-      <ion-tab-button tab="map">
-        <ion-icon name="person-outline"></ion-icon>
-      </ion-tab-button>
-  
-    </ion-tab-bar>
-  </ion-tabs> -->
+  <ion-footer>
+    <div class="footer">
+      <ion-icon class="footer_image" (click)='goToPageMenu("regioes")' name="home-outline"></ion-icon>
+      <ion-icon class="footer_image" (click)='goToPageMenu("favorito")' name="star-outline"></ion-icon>
+      <ion-icon class="footer_image" (click)='goToPageMenu("perfil")' name="person-outline"></ion-icon>
+    </div>
+  </ion-footer>
