--- a/aula01/hello-word/src/app/regioes/regioes.page.scss
+++ b/aula01/hello-word/src/app/regioes/regioes.page.scss
@@ -11,7 +11,7 @@ h3{
     font-weight: bold;
 }
 
-p{
+p, .p{
     color: #fff;
     font-size: 25px;
     font-weight: bold;
@@ -47,4 +47,14 @@ ion-content{
     padding-right: 20px;  
   }
   
+  .footer {
+    background: #D9D9D9;
+    padding: 15px;
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .footer_image {
+    font-size: 26px;
+  }
  
