tela de registro

--- a/aula01/hello-word/src/app/registro/registro.page.html
+++ b/aula01/hello-word/src/app/registro/registro.page.html
@@ -11,30 +11,30 @@
       <form class="formulario">
         <div class="completar">
           <label for="nome"></label>
-            <input class="input" type="text" id="nome" placeholder=" NOME COMPLETO"/>
+            <input class="input" [(ngModel)]="name" type="text" id="nome" placeholder=" NOME COMPLETO"/>
         </div>
         
         <div class="completar">
           <label for="email" name="email"></label>
-          <input class="input" type="text" id="email" placeholder=" EMAIL"/>
+          <input class="input" [(ngModel)]="email" type="text" id="email" placeholder=" EMAIL"/>
         </div>
         
         <div class="completar">
           <label for="senha"></label>
-          <input class="input" type="password" id="senha" placeholder=" SENHA"/>
+          <input class="input" [(ngModel)]="password" type="password" id="senha" placeholder=" SENHA"/>
         </div>
         
         <div class="completar"> 
           <label for="uf"></label>
-          <input class="input" type="text" id="uf" placeholder=" UF"/>
+          <input class="input" [(ngModel)]="uf" type="text" id="uf" placeholder=" UF"/>
         </div>
         
         <div class="completar">
           <label for="cidade"></label>
-          <input class="input" type="text" id="cidade" placeholder="CIDADE"/>
+          <input class="input" [(ngModel)]="city" type="text" id="cidade" placeholder="CIDADE"/>
         </div>
         
-        <ion-button (click)='goToPage("login")' Class=" button-rg" expand="block">REGISTRAR</ion-button>
+        <ion-button (click)="onSubmit()" Class=" button-rg" expand="block">REGISTRAR</ion-button>
       </form>
       
       
